@@ -5,3 +5,4 @@ overrides.equals=annotated with @UsesObjectEquals but overrides .equals(Object)
 superclass.notannotated=superclass must be annotated with @UsesObjectEquals
 superclass.annotated=subclasses must also be annotated with @UsesObjectEquals
 interned.object.creation=Cannot statically verify that a new object of an @Interned class is @Interned
+invalid.method.annotation=%s applies to a method with %s formal parameters; %s has %d
