@@ -1,3 +1,13 @@
+---------------------------------------------------------------------------
+
+Version 3.?.?, August 3, 2020
+
+The Interning Checker supports method annotations @EqualsMethod and
+@CompareToMethod.  Place them on methods like equals(), compareTo(), and
+compare() to permit certain uses of == on non-interned values.
+
+---------------------------------------------------------------------------
+
 Version 3.5.0, July 1, 2020
 
 Use "allcheckers:" instead of "all:" as a prefix in a warning suppression string.
